yaplParser.py
# Generated from yapl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'<-'", "'@'", "'.'", "'*'", "'/'", "'+'", "'-'", 
                     "'<='", "'=>'", "'='", "'<'", "'~'", "'class'", "'else'", 
                     "'fi'", "'if'", "'in'", "'inherits'", "'loop'", "'pool'", 
                     "'then'", "'while'", "'new'", "'isvoid'", "'not'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", "LOOP", 
                      "POOL", "THEN", "WHILE", "NEW", "ISVOID", "NOT", "TRUE", 
                      "FALSE", "STRING", "INT", "TYPE", "ID", "WHITESPACE", 
                      "BLOCK_COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_classkey = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expression = 4

    ruleNames =  [ "program", "classkey", "feature", "formal", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    CLASS=20
    ELSE=21
    FI=22
    IF=23
    IN=24
    INHERITS=25
    LOOP=26
    POOL=27
    THEN=28
    WHILE=29
    NEW=30
    ISVOID=31
    NOT=32
    TRUE=33
    FALSE=34
    STRING=35
    INT=36
    TYPE=37
    ID=38
    WHITESPACE=39
    BLOCK_COMMENT=40
    LINE_COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(yaplParser.EOF, 0)

        def classkey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ClasskeyContext)
            else:
                return self.getTypedRuleContext(yaplParser.ClasskeyContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = yaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.classkey()
                self.state = 11
                self.match(yaplParser.T__0)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 17
            self.match(yaplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClasskeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE)
            else:
                return self.getToken(yaplParser.TYPE, i)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FeatureContext)
            else:
                return self.getTypedRuleContext(yaplParser.FeatureContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_classkey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasskey" ):
                listener.enterClasskey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasskey" ):
                listener.exitClasskey(self)




    def classkey(self):

        localctx = yaplParser.ClasskeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classkey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(yaplParser.CLASS)
            self.state = 20
            self.match(yaplParser.TYPE)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 21
                self.match(yaplParser.INHERITS)
                self.state = 22
                self.match(yaplParser.TYPE)


            self.state = 25
            self.match(yaplParser.T__1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 26
                self.feature()
                self.state = 27
                self.match(yaplParser.T__0)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(yaplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def TYPE(self):
            return self.getToken(yaplParser.TYPE, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FormalContext)
            else:
                return self.getTypedRuleContext(yaplParser.FormalContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = yaplParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(yaplParser.ID)
                self.state = 37
                self.match(yaplParser.T__3)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==38:
                    self.state = 38
                    self.formal()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==5:
                        self.state = 39
                        self.match(yaplParser.T__4)
                        self.state = 40
                        self.formal()
                        self.state = 45
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 51
                self.match(yaplParser.T__5)
                self.state = 52
                self.match(yaplParser.T__6)
                self.state = 53
                self.match(yaplParser.TYPE)
                self.state = 54
                self.match(yaplParser.T__1)
                self.state = 55
                self.expression(0)
                self.state = 56
                self.match(yaplParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.formal()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 59
                    self.match(yaplParser.T__7)
                    self.state = 60
                    self.expression(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def TYPE(self):
            return self.getToken(yaplParser.TYPE, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = yaplParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(yaplParser.ID)
            self.state = 66
            self.match(yaplParser.T__6)
            self.state = 67
            self.match(yaplParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(yaplParser.IF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExpressionContext,i)


        def THEN(self):
            return self.getToken(yaplParser.THEN, 0)

        def ELSE(self):
            return self.getToken(yaplParser.ELSE, 0)

        def FI(self):
            return self.getToken(yaplParser.FI, 0)

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def WHILE(self):
            return self.getToken(yaplParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(yaplParser.LOOP, 0)

        def POOL(self):
            return self.getToken(yaplParser.POOL, 0)

        def ISVOID(self):
            return self.getToken(yaplParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(yaplParser.NOT, 0)

        def NEW(self):
            return self.getToken(yaplParser.NEW, 0)

        def TYPE(self):
            return self.getToken(yaplParser.TYPE, 0)

        def STRING(self):
            return self.getToken(yaplParser.STRING, 0)

        def FALSE(self):
            return self.getToken(yaplParser.FALSE, 0)

        def TRUE(self):
            return self.getToken(yaplParser.TRUE, 0)

        def INT(self):
            return self.getToken(yaplParser.INT, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = yaplParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 70
                self.match(yaplParser.IF)
                self.state = 71
                self.expression(0)
                self.state = 72
                self.match(yaplParser.THEN)
                self.state = 73
                self.expression(0)
                self.state = 74
                self.match(yaplParser.ELSE)
                self.state = 75
                self.expression(0)
                self.state = 76
                self.match(yaplParser.FI)
                pass

            elif la_ == 2:
                self.state = 78
                self.match(yaplParser.ID)
                self.state = 79
                self.match(yaplParser.T__3)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 411788902420) != 0):
                    self.state = 80
                    self.expression(0)
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==5:
                        self.state = 81
                        self.match(yaplParser.T__4)
                        self.state = 82
                        self.expression(0)
                        self.state = 87
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 93
                self.match(yaplParser.T__5)
                pass

            elif la_ == 3:
                self.state = 94
                self.match(yaplParser.WHILE)
                self.state = 95
                self.expression(0)
                self.state = 96
                self.match(yaplParser.LOOP)
                self.state = 97
                self.expression(0)
                self.state = 98
                self.match(yaplParser.POOL)
                pass

            elif la_ == 4:
                self.state = 100
                self.match(yaplParser.T__1)
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 101
                    self.expression(0)
                    self.state = 102
                    self.match(yaplParser.T__0)
                    self.state = 106 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 411788902420) != 0)):
                        break

                self.state = 108
                self.match(yaplParser.T__2)
                pass

            elif la_ == 5:
                self.state = 110
                self.match(yaplParser.ID)
                self.state = 111
                self.match(yaplParser.T__7)
                self.state = 112
                self.expression(11)
                pass

            elif la_ == 6:
                self.state = 113
                self.match(yaplParser.ISVOID)
                self.state = 114
                self.expression(10)
                pass

            elif la_ == 7:
                self.state = 115
                self.match(yaplParser.T__18)
                self.state = 116
                self.expression(9)
                pass

            elif la_ == 8:
                self.state = 117
                self.match(yaplParser.NOT)
                self.state = 118
                self.expression(8)
                pass

            elif la_ == 9:
                self.state = 119
                self.match(yaplParser.T__3)
                self.state = 120
                self.expression(0)
                self.state = 121
                self.match(yaplParser.T__5)
                pass

            elif la_ == 10:
                self.state = 123
                self.match(yaplParser.NEW)
                self.state = 124
                self.match(yaplParser.TYPE)
                pass

            elif la_ == 11:
                self.state = 125
                self.match(yaplParser.STRING)
                pass

            elif la_ == 12:
                self.state = 126
                self.match(yaplParser.FALSE)
                pass

            elif la_ == 13:
                self.state = 127
                self.match(yaplParser.TRUE)
                pass

            elif la_ == 14:
                self.state = 128
                self.match(yaplParser.INT)
                pass

            elif la_ == 15:
                self.state = 129
                self.match(yaplParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 175
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 132
                        if not self.precpred(self._ctx, 19):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 19)")
                        self.state = 133
                        _la = self._input.LA(1)
                        if not(_la==11 or _la==12):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 134
                        self.expression(20)
                        pass

                    elif la_ == 2:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 135
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 136
                        _la = self._input.LA(1)
                        if not(_la==13 or _la==14):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 137
                        self.expression(19)
                        pass

                    elif la_ == 3:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 138
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 17)")
                        self.state = 139
                        self.match(yaplParser.T__7)
                        self.state = 140
                        self.expression(18)
                        pass

                    elif la_ == 4:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 141
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 142
                        self.match(yaplParser.T__14)
                        self.state = 143
                        self.expression(16)
                        pass

                    elif la_ == 5:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 144
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 145
                        self.match(yaplParser.T__15)
                        self.state = 146
                        self.expression(15)
                        pass

                    elif la_ == 6:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 147
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 148
                        self.match(yaplParser.T__16)
                        self.state = 149
                        self.expression(14)
                        pass

                    elif la_ == 7:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 150
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 151
                        self.match(yaplParser.T__17)
                        self.state = 152
                        self.expression(13)
                        pass

                    elif la_ == 8:
                        localctx = yaplParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 153
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 156
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==9:
                            self.state = 154
                            self.match(yaplParser.T__8)
                            self.state = 155
                            self.match(yaplParser.TYPE)


                        self.state = 158
                        self.match(yaplParser.T__9)
                        self.state = 159
                        self.match(yaplParser.ID)
                        self.state = 160
                        self.match(yaplParser.T__3)
                        self.state = 171
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while (((_la) & ~0x3f) == 0 and ((1 << _la) & 411788902420) != 0):
                            self.state = 161
                            self.expression(0)
                            self.state = 166
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==5:
                                self.state = 162
                                self.match(yaplParser.T__4)
                                self.state = 163
                                self.expression(0)
                                self.state = 168
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)

                            self.state = 173
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 174
                        self.match(yaplParser.T__5)
                        pass

             
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 19)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 18)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 17)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 15)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 23)
         




